update updateMovie route & update documentation
