# src/routes/movie.routes.js
@@ -3,10 +3,14 @@ import controller from "../controllers/movie.controller.js";
 
 const router = express.Router();
 
+// /api/movies
 router.get("/", controller.getMovies);
-router.get("/:id", controller.getMovieById);
 router.post("/", controller.createMovie);
-router.put("/:id", controller.updateMovie);
+router.put("/", controller.updateOrCreateMovie);
+
+// /api/movies/:id
+router.get("/:id", controller.getMovieById);
+router.patch("/:id", controller.updateMovie);
 router.delete("/:id", controller.deleteMovie);
 
 export default router;
